--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -7,13 +7,13 @@
 
 	<!-- Primary Nav -->
 	<ul class="flex b grey-3">
-		<li><a href="/products" class="pa3 no-underline db">Products</a></li>
+		<li><a href="/products" class="pa3 no-underline db">Test1</a></li>
 
-		<li><a href="/values" class="pa3 no-underline db">Values</a></li>
+		<li><a href="/values" class="pa3 no-underline db">Test2</a></li>
 
-		<li><a href="/post" class="pa3 no-underline db">Blog</a></li>
+		<li><a href="/post" class="pa3 no-underline db">Test3</a></li>
 
-		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>
+		<li><a href="/contact" class="pa3 no-underline db">Test4</a></li>
 	</ul>
 
 </nav>
